Test: 대여 검색 로직 테스트